--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@iconify/vue": "^4.1.1",
     "axios": "^1.6.5",
     "chart.js": "^4.4.2",
+    "fuse.js": "^7.0.0",
     "moment-timezone": "^0.5.45",
     "vue": "^3.3.11",
     "vue-chartjs": "^5.3.0",
