--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.5",
     "chart.js": "^4.4.2",
     "fuse.js": "^7.0.0",
+    "geolib": "^3.3.4",
     "moment-timezone": "^0.5.45",
     "vue": "^3.3.11",
     "vue-chartjs": "^5.3.0",
